@@ -1,4 +1,9 @@
-2012-06-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+2012-06-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+ 	* support/regression/tests/and_survive.c:
+	  Test non-destructive and, regression test for #3534833.
+
+2012-06-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/hc08/gen.c:
 	  Fix cost calculation for branches.
